--- a/samples/I18nSample/i18n_sample/pubspec.yaml
+++ b/samples/I18nSample/i18n_sample/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
