--- a/samples/PersistSample/persist_sample/pubspec.yaml
+++ b/samples/PersistSample/persist_sample/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: '>=0.5.7+3 <2.0.0'
-
+  sqflite:
+  path:
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
