--- a/samples/JsonParserSample/json_parser/pubspec.yaml
+++ b/samples/JsonParserSample/json_parser/pubspec.yaml
@@ -29,12 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   json_annotation: ^3.0.1
+  built_value: ^7.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
   json_serializable: ^3.3.0
+  built_value_generator: ^7.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
