--- a/samples/JsonParserSample/json_parser/pubspec.yaml
+++ b/samples/JsonParserSample/json_parser/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   json_annotation: ^3.0.1
   built_value: ^7.1.0
-  freezed: ^0.10.9
+  freezed_annotation: ^0.7.1
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +38,7 @@ dev_dependencies:
   build_runner: ^1.10.0
   json_serializable: ^3.3.0
   built_value_generator: ^7.1.0
+  freezed: ^0.10.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
