--- a/samples/JsonParserSample/json_parser/pubspec.yaml
+++ b/samples/JsonParserSample/json_parser/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   json_annotation: ^3.0.1
   built_value: ^7.1.0
+  built_collection: ^4.3.2
   freezed_annotation: ^0.7.1
 
 dev_dependencies:
