--- a/samples/RiverpodSample/sample_of_riverpod/pubspec.yaml
+++ b/samples/RiverpodSample/sample_of_riverpod/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  riverpod: ^0.4.0
+  hooks_riverpod: ^0.4.0
+  flutter_hooks: ^0.11.0
 
 dev_dependencies:
   flutter_test:
