--- a/samples/DISample/di_sample/pubspec.yaml
+++ b/samples/DISample/di_sample/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  provider: ^4.3.1
   state_notifier: ^0.6.0
+  flutter_state_notifier: ^0.6.1
 
 dev_dependencies:
   flutter_test:
