pubspec.yaml に flavorizr の定義を追加し、flutter pub run flutter_flavorizr を実行

--- a/samples/FlutterFlavorizrSample/flutter_flavorizr_sample/pubspec.yaml
+++ b/samples/FlutterFlavorizrSample/flutter_flavorizr_sample/pubspec.yaml
@@ -75,3 +75,26 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flavorizr:
+  app:
+    android:
+      flavorDimensions: "app"
+    ios:
+
+  flavors:
+    app1:
+      app:
+        name: "App 1"
+      android:
+        applicationId: "com.github.mag0716.flutterflavorizrsample"
+      ios:
+        bundleId: "com.github.mag0716.flutterflavorizrsample"
+
+    app2:
+      app:
+        name: "App 2"
+      android:
+        applicationId: "com.github.mag0716.flutterflavorizrsample"
+      ios:
+        bundleId: "com.github.mag0716.flutterflavorizrsample"
+
