--- a/samples/FlutterFlavorizrSample/flutter_flavorizr_sample/android/app/build.gradle
+++ b/samples/FlutterFlavorizrSample/flutter_flavorizr_sample/android/app/build.gradle
@@ -26,6 +26,22 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    flavorDimensions "app"
+
+    productFlavors {
+        app1 {
+            dimension "app"
+            applicationId "com.github.mag0716.flutterflavorizrsample"
+            resValue "string", "app_name", "App 1"
+        }
+        app2 {
+            dimension "app"
+            applicationId "com.github.mag0716.flutterflavorizrsample"
+            resValue "string", "app_name", "App 2"
+        }
+    }
+
     compileSdkVersion 28
 
     sourceSets {
@@ -61,3 +77,4 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
