--- a/samples/DISample/di_sample/pubspec.yaml
+++ b/samples/DISample/di_sample/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_state_notifier: ^0.6.1
 
 dev_dependencies:
+  flutter_flavorizr: ^1.0.2
   flutter_test:
     sdk: flutter
 
